2007-10-22  Sven Neumann  <sven@gimp.org>

	* app/tools/gimppaintoptions-gui.c: changed aspect ratio of the
	wrap-box used for the "Pressure sensitivity" controls to make them
	fit better into the tool-options.

2007-10-22  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/tinyscheme/scheme.c: Allow one to three
	digits in octal coded characters.

2007-10-22  Sven Neumann  <sven@gimp.org>

	* plug-ins/gflare/gflare.c (plugin_do_non_asupsample): fixed
	initialisation of pixel regions (bug #488845).

2007-10-22  Sven Neumann  <sven@gimp.org>

	* plug-ins/gflare/gflare.c: formatting.

2007-10-22  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpsourcetool.[ch]: don't draw the source brush
	outline while selecting a new source location (bug #488839).

2007-10-22  Sven Neumann  <sven@gimp.org>

	* modules/cdisplay_lcms.c: improved display of profiles.

2007-10-22  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/jpeg/jpegqual.c (quant_info): Updated table for Adobe
	products.  Thanks to Bart for the sample files.

2007-10-21  Simon Budig  <simon@gimp.org>

	* plug-ins/script-fu/scheme-wrapper.c: Add comment regarding
	the safe-foreign issue.

2007-10-21  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/scheme-wrapper.c: Reverted changes in handling
	of string arrays to stay backwards compatible (see bug #317634).

	* plug-ins/script-fu/scripts/font-map.scm: Updated based on change
	in handling of string arrays listed above.

2007-10-21  Michael Natterer  <mitch@gimp.org>

	* app/dialogs/fade-dialog.c (fade_dialog_new): revert change below.

	* app/paint-funcs/paint-funcs.c (replace_inten_pixels): also honor
	the passed opacity when there is no mask. Fixes blending in
	replace mode then where is no selection.

2007-10-21  Sven Neumann  <sven@gimp.org>

	* app/dialogs/fade-dialog.c (fade_dialog_new): select "Normal"
	when the mode of the operation is "Replace". This is incorrect but
	it makes the dialog a lot easier to use.
